# backend

./: .dockerignore  .env.development  .env.example  .env.production  .env.stage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose-dev.yaml  docker-compose-development.yaml  docker-compose-production.yaml  docker-compose-stage.yaml  docker-compose.yaml  factories.py  manage.py  pyproject.toml  ruff.toml
apps/core/: exceptions.py  models.py  serializers.py  validators.py  views.py
apps/events/: admin.py  choices.py  filters.py  models.py  permissions.py  premissions.py  serializer.py  tasks.py  urls.py  utils.py  validators.py  views.py
apps/news/: feeds.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/organizations/: filters.py  models.py  permissions.py  serializer.py  urls.py  views.py
apps/payment/: admin.py  choices.py  managers.py  models.py  serializer.py  service.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/socials/: choices.py  models.py
apps/users/: managers.py  models.py  urls.py
apps/verification/: models.py  tasks.py
config/: asgi.py  celery.py  urls.py  wsgi.py
events/: admin.py  models.py  premissions.py  serializer.py  urls.py  views.py
organization/: models.py  serializer.py  urls.py  views.py
payment/: models.py  urls.py  views.py
scripts/: prepare.sh
static/: email_styles.css
templates/: email_base.html
users/: TODO.md  admin.py  managers.py  models.py  serializer.py  urls.py  views.py
verification/: choices.py  models.py  tasks.py
(+109 files in other folders)
